# gtui

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  README_CN.md  requirements.txt  setup.cfg  setup.py
gtui/: __init__.py  callback.py  executor.py  task.py  visualizer.py
gtui/utils/: __init__.py  notify.py  urwid_scroll.py  werkzeug_local.py
