[metadata]
name = gtui
version = 0.0.1
author = Tianhong Chu
author-email = cthesky13@gmail.com
home-page = https://github.com/CtheSky/gtui
description = Simple Task Scheduler & Executor with Friendly Text User Interface
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
keywords = TUI, Command Line Tool, Scheduler 
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[files]
packages = gtui

[options]
zip_safe = True
python_requires = >= 3.4

[bdist_wheel]
universal = true